# animato

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  audit.toml
.github/release-notes/: 1.6.0.md  1.7.0.md
.github/workflows/: ci.yml  publish-npm.yml  publish.yml
crates/animato/: Cargo.toml
crates/animato-core/src/: lib.rs  traits.rs
crates/animato-devtools/: Cargo.toml
crates/animato-devtools/src/: easing_editor.rs  egui_panel.rs  inspector.rs  lib.rs  perf_monitor.rs  recorder_controls.rs  spring_viz.rs  state.rs  tui_panel.rs  web_panel.rs
crates/animato-dioxus/: Cargo.toml
crates/animato-dioxus/src/: css.rs  gesture.rs  hooks.rs  lib.rs  list.rs  motion.rs  native.rs  platform.rs  presence.rs  scroll.rs  transition.rs
crates/animato-driver/src/: driver.rs  lib.rs
crates/animato-js/: Cargo.toml  README.md
crates/animato-js/src/: devtools.rs  driver.rs  lib.rs  tween.rs  types.rs
crates/animato-js/tests/: wasm.rs
crates/animato-leptos/src/: list.rs
crates/animato-macro/: Cargo.toml
crates/animato-macro/src/: ast.rs  easing.rs  error.rs  expand.rs  framework.rs  lib.rs  parser.rs  presets.rs  validate.rs
crates/animato-spring/src/: spring.rs  spring_n.rs
crates/animato-timeline/src/: group.rs  timeline.rs
crates/animato-tween/src/: keyframe.rs  loop_mode.rs  tween.rs
crates/animato-yew/: Cargo.toml
crates/animato-yew/src/: agent.rs  css.rs  gesture.rs  hooks.rs  lib.rs  list.rs  presence.rs  raf.rs  scroll.rs  transition.rs
crates/animato-yew/tests/: ssr_render.rs
crates/animato/src/: lib.rs
docs/: README.md  api-full.md  bevy.md  color.md  devtools.md  dioxus.md  driver.md  examples.md  feature-flags.md  getting-started.md  gpu.md  installation.md  javascript.md  leptos.md  macro-expansion.md  macro-frameworks.md  macro-recipes.md  macro-reference.md  migration.md  motion-macro.md  no-std.md  path.md  physics.md  release.md  spring.md  testing.md  timeline.md  troubleshooting.md  tween.md  wasm.md  yew.md
examples/: basic_tween.rs  macro_basic_tween.rs  macro_color_theme.rs  macro_hero_intro.rs  macro_keyframes.rs  macro_loading_wave.rs  macro_modal_transition.rs  macro_motion_path.rs  macro_page_transition.rs  macro_parallel.rs  macro_sequence.rs  macro_spring_card.rs  macro_stagger_grid.rs
examples/devtools_bevy_egui/: Cargo.toml
examples/devtools_bevy_egui/src/: main.rs
examples/devtools_tui/: Cargo.toml
examples/devtools_tui/src/: main.rs
examples/devtools_web_overlay/: Cargo.toml
examples/devtools_web_overlay/src/: main.rs
examples/dioxus_cross_platform/: Cargo.toml
examples/dioxus_cross_platform/src/: main.rs
examples/dioxus_desktop_spring/: Cargo.toml
examples/dioxus_desktop_spring/src/: main.rs
examples/dioxus_tui_progress/: Cargo.toml
examples/dioxus_tui_progress/src/: main.rs
examples/dioxus_web_tween/: Cargo.toml
examples/dioxus_web_tween/src/: main.rs
examples/js_advanced_engine/: package-lock.json  package.json
examples/js_angular_color/: package-lock.json  package.json
examples/js_angular_color/src/app/: app.component.ts
examples/js_devtools/: package-lock.json  package.json
examples/js_devtools/src/: index.html  main.js
examples/js_react_tween/: package-lock.json  package.json
examples/js_react_tween/src/: App.jsx
examples/js_svelte_spring/: package-lock.json  package.json
examples/js_svelte_spring/src/: App.svelte
examples/js_vanilla_timeline/: package-lock.json  package.json
examples/js_vanilla_timeline/src/: main.js
examples/js_vue_motion/: package-lock.json  package.json
examples/js_vue_motion/src/: App.vue
examples/yew_agent_coordination/: Cargo.toml  index.html
examples/yew_agent_coordination/src/: main.rs
examples/yew_animated_list/: Cargo.toml  index.html
examples/yew_animated_list/src/: main.rs
examples/yew_basic_tween/: Cargo.toml  index.html
examples/yew_basic_tween/src/: main.rs
examples/yew_drag_gesture/: Cargo.toml  index.html
examples/yew_drag_gesture/src/: main.rs
examples/yew_page_transition/: Cargo.toml  index.html
examples/yew_page_transition/src/: main.rs
examples/yew_scroll_trigger/: Cargo.toml  index.html
examples/yew_scroll_trigger/src/: main.rs
scripts/: build-js-package.sh  check-js-size.mjs  ci-local.sh  prepare-js-package.mjs  verify-js-example.mjs
tests/: devtools_facade.rs  dioxus_facade.rs  keyframe_looping.rs  macro_integration.rs  macro_runtime_parity.rs  timeline_sequence.rs  trybuild_suite.rs  tween_lifecycle.rs  yew_facade.rs
tests/trybuild/compile_fail/: missing_duration.rs  missing_duration.stderr  unknown_easing.rs  unknown_easing.stderr  unknown_keyword.rs  unknown_preset.rs  unknown_preset.stderr  unknown_spring_preset.rs  unknown_spring_preset.stderr  value_type_mismatch.rs  value_type_mismatch.stderr
tests/trybuild/compile_pass/: cubic_bezier.rs  keyframes_basic.rs  loop_mode.rs  motion_alias.rs  motion_path.rs  parallel_basic.rs  preset_call.rs  sequence_basic.rs  spring_explicit.rs  spring_preset.rs  stagger_grid.rs  tween_basic.rs  tween_vector.rs
