[workspace]
resolver = "2"
exclude = [
    "examples/wasm_counter",
    "examples/leptos_basic_tween",
    "examples/leptos_scroll_trigger",
    "examples/leptos_page_transition",
    "examples/leptos_animated_list",
    "examples/leptos_drag_gesture",
    "examples/dioxus_web_tween",
    "examples/dioxus_desktop_spring",
    "examples/dioxus_cross_platform",
    "examples/dioxus_tui_progress",
    "examples/yew_basic_tween",
    "examples/yew_scroll_trigger",
    "examples/yew_animated_list",
    "examples/yew_drag_gesture",
    "examples/yew_page_transition",
    "examples/yew_agent_coordination",
    "fuzz",
]
members = [
    "crates/animato-core",
    "crates/animato-tween",
    "crates/animato-timeline",
    "crates/animato-spring",
    "crates/animato-path",
    "crates/animato-physics",
    "crates/animato-color",
    "crates/animato-driver",
    "crates/animato-gpu",
    "crates/animato-bevy",
    "crates/animato-wasm",
    "crates/animato-leptos",
    "crates/animato-dioxus",
    "crates/animato-yew",
    "crates/animato-js",
    "crates/animato",
]

[workspace.package]
version      = "1.5.1"
edition      = "2024"
license      = "MIT OR Apache-2.0"
readme       = "README.md"
repository   = "https://github.com/AarambhDevHub/animato"
authors      = ["Aarambh Dev Hub"]
rust-version = "1.89"

[workspace.dependencies]
# Internal crates — path + version pinned to workspace
animato-core     = { path = "crates/animato-core",     version = "1.5.1" }
animato-tween    = { path = "crates/animato-tween",    version = "1.5.1" }
animato-timeline = { path = "crates/animato-timeline", version = "1.5.1" }
animato-spring   = { path = "crates/animato-spring",   version = "1.5.1" }
animato-path     = { path = "crates/animato-path",     version = "1.5.1" }
animato-physics  = { path = "crates/animato-physics",  version = "1.5.1" }
animato-color    = { path = "crates/animato-color",    version = "1.5.1" }
animato-driver   = { path = "crates/animato-driver",   version = "1.5.1" }
animato-gpu      = { path = "crates/animato-gpu",      version = "1.5.1" }
animato-bevy     = { path = "crates/animato-bevy",     version = "1.5.1" }
animato-wasm     = { path = "crates/animato-wasm",     version = "1.5.1" }
animato-leptos   = { path = "crates/animato-leptos",   version = "1.5.1" }
animato-dioxus   = { path = "crates/animato-dioxus",   version = "1.5.1" }
animato-yew      = { path = "crates/animato-yew",      version = "1.5.1" }
animato-js       = { path = "crates/animato-js",       version = "1.5.1" }

# External crates — shared version pins
serde        = { version = "1",   features = ["derive"] }
tokio        = { version = "1",   features = ["sync"] }
palette      = { version = "0.7", default-features = false, features = ["libm"] }
approx       = { version = "0.5" }
criterion    = { version = "0.5", features = ["html_reports"] }
bytemuck     = { version = "1.25", features = ["derive"] }
pollster     = { version = "0.4" }
wgpu         = { version = "29.0.3" }
bevy_app     = { version = "0.18.1", default-features = false }
bevy_ecs     = { version = "0.18.1", default-features = false }
bevy_math    = { version = "0.18.1", default-features = false, features = ["libm"] }
bevy_time    = { version = "0.18.1", default-features = false }
bevy_transform = { version = "0.18.1", default-features = false, features = ["bevy-support", "libm"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-test = { version = "0.3" }
console_error_panic_hook = { version = "0.1" }
js-sys       = { version = "0.3" }
web-sys      = { version = "0.3" }
leptos       = { version = "0.8.19" }
leptos_router = { version = "0.8.13" }
dioxus       = { version = "0.7.9", default-features = false, features = ["hooks", "html", "macro", "signals"] }
dioxus-router = { version = "0.7.9", default-features = false }
yew          = { version = "0.23", default-features = false }
yew-router   = { version = "0.20", default-features = false }
yew-agent    = { version = "0.5" }
ratatui      = { version = "0.30.0" }
crossterm    = { version = "0.29.0" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.animato-js]
opt-level = "z"
